<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@android:color/background_light"
    android:layout_margin="1dp">
    
	
    <EditText
        android:id="@+id/newBillName"
        android:layout_margin="1dp"
        android:hint="Bill Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="67dp"
        android:ems="10" />

    <EditText
        android:id="@+id/newBillAmount"
        android:layout_margin="1dp"
        android:hint="Bill Amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newBillName"
        android:layout_centerHorizontal="true"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/newBillDueDate"
        android:layout_margin="1dp"
        android:hint="MM/DD/YYYY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newBillAmount"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="date" />

    <Button
        android:id="@+id/addNewBill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/newBillDueDate"
        android:layout_below="@+id/newBillDueDate"
        android:text="@string/add_new_bill" />

    <Button
        android:id="@+id/Cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/newBillDueDate"
        android:layout_below="@+id/newBillDueDate"
        android:text="@string/cancel_add" />

    <EditText
        android:id="@+id/CreateBillNote"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_below="@+id/addNewBill"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textMultiLine"
        android:hint="@string/billDataInputText" />


</RelativeLayout>